fix(footer): fix footer to only show social media logos on mobile view

--- a/src/MyFooter/Footer.css
+++ b/src/MyFooter/Footer.css
@@ -11,6 +11,7 @@
     top: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
+    width: 100%;
 }
 
 .icon {
@@ -58,8 +59,13 @@ a {
     background-color: #E15638;
 }
 
-@media (min-width: 768px) {
-    .contactme_button {
-      padding: 13px 50px 13px;
+/* Media query for mobile view */
+@media (max-width: 768px) {
+    .col-1 {
+      display: None;
+    }
+
+    .col-2 {
+      width: 200%;
     }
 }
